[package]
name = "layer-shell-wgpu-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
crossbeam = "0.8.4"
egui = "0.28.1"
egui-wgpu = "0.28.1"
evdev-shortcut = "0.1.5"
pollster = "0.3.0"
raw-window-handle = "0.6.2"
smithay-client-toolkit = "0.19.2"
thiserror = "1.0.63"
wayland-backend = { version = "0.3.6", features = ["client_system"] }
wayland-client = "0.31.5"
wayland-protocols-plasma = { version = "0.3.9", features = ["client"] }
wgpu = "0.20.1"
evdev = "0.13.2"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3.31"
tarpc = { version = "0.37.0", features = ["serde-transport-bincode", "unix"] }
clap = { version = "4.5.48", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wayland-clipboard-listener = "0.5.0"

[dev-dependencies]
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
# image = { version = "0.25", features = ["jpeg", "png", "gif"] } # to support more image formats
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
