[package]
name = "wpopup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
crossbeam = "0.8.4"
egui = "0.32.3"
egui-wgpu = "0.32.3"
evdev-shortcut = "0.1.5"
pollster = "0.3.0"
raw-window-handle = "0.6.2"
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
thiserror = "1.0.63"
wayland-backend = { version = "0.3.6", features = ["client_system"] }
wayland-client = "0.31.5"
wayland-protocols-plasma = { version = "0.3.9", features = ["client"] }
wgpu = "25.0.2"
evdev = { version = "0.13.2", features = ["serde"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "signal"
] }
futures = "0.3.31"
clap = { version = "4.5.48", features = ["derive"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.20"
wayland-clipboard-listener = "0.5.0"
async-bincode = { version = "0.8.0", features = ["futures"] }
flume = "0.11.1"
serde = { version = "1.0.226", features = ["derive"] }
log = "0.4.28"
bitflags = "2"
dpi = "0.1.2"
egui-chinese-font = { path = "./egui-chinese-font" }

[dev-dependencies]
egui_extras = { version = "0.32.3", features = ["all_loaders"] }
# image = { version = "0.25", features = ["jpeg", "png", "gif"] } # to support more image formats
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
